--- a/.github/workflows/ci-godot.yml
+++ b/.github/workflows/ci-godot.yml
@@ -33,6 +33,7 @@ jobs:
         with:
           name: web
           path: build/web
+          lfs: true
       - name: Install rsync 📚
         run: |
           apt-get update && apt-get install -y rsync
@@ -41,3 +42,4 @@ jobs:
         with:
           branch: gh-pages # The branch the action should deploy to.
           folder: build/web # The folder the action should deploy.
+          lfs: true
