--- a/.github/workflows/ci-godot.yml
+++ b/.github/workflows/ci-godot.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          lfs: true
       - name: Setup
         run: |
           mkdir -v -p ~/.local/share/godot/templates
